<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RadarItemRelativeLayout01"
    android:layout_width="fill_parent"
    android:layout_height="22sp"
    android:background="@drawable/item"
    android:orientation="horizontal"
    android:padding="4sp">


    <LinearLayout
        android:id="@+id/RadarItemLinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="22sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/time"
            android:layout_width="54sp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/radar_item"
            android:ellipsize="marquee"
            android:lines="1"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:minLines="1"
            android:shadowColor="#88444444"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:singleLine="true"
            android:text="@string/radar_title_time"
            android:textColor="#FFFFFF"
            android:textSize="12sp"></TextView>

        <TextView
            android:id="@+id/code"
            android:layout_width="54sp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/radar_item"
            android:ellipsize="marquee"
            android:lines="1"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:minLines="1"
            android:shadowColor="#88444444"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:singleLine="true"
            android:text="@string/radar_title_code"
            android:textColor="#FFFFFF"
            android:textSize="12sp"></TextView>

        <TextView
            android:id="@+id/name"
            android:layout_width="54sp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/radar_item"
            android:ellipsize="marquee"
            android:lines="1"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:minLines="1"
            android:shadowColor="#88444444"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:singleLine="true"
            android:text="@string/radar_title_name"
            android:textColor="#FFFFFF"
            android:textSize="12sp"></TextView>

        <TextView
            android:id="@+id/price"
            android:layout_width="54sp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/radar_item"
            android:ellipsize="marquee"
            android:lines="1"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:minLines="1"
            android:shadowColor="#88444444"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:singleLine="true"
            android:text="@string/radar_title_price"
            android:textColor="#FFFFFF"
            android:textSize="12sp"></TextView>

        <TextView
            android:id="@+id/type"
            android:layout_width="54sp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/radar_item"
            android:ellipsize="marquee"
            android:lines="1"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:minLines="1"
            android:shadowColor="#88444444"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:singleLine="true"
            android:text="@string/radar_title_type"
            android:textColor="#FFFFFF"
            android:textSize="12sp"></TextView>

        <TextView
            android:id="@+id/volume"
            android:layout_width="54sp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/radar_item"
            android:ellipsize="marquee"
            android:lines="1"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:minLines="1"
            android:shadowColor="#88444444"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:singleLine="true"
            android:text="@string/radar_title_volume"
            android:textColor="#FFFFFF"
            android:textSize="12sp"></TextView>

    </LinearLayout>
</RelativeLayout>
